# undervest

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  buildconf  configure.ac  undervest.conf.in  undervest.init.in  undervest.service.in  undervest.spec.in  undervest.sysconfig
docs/: Makefile.am  undervest.8  undervest.conf.5
include/: Makefile.am  cdlfcn  configuration.h  crc32.h  daemon.h  domain.h  filepath.h  globals.h  logger.h  matcher.h  milter.h  scaled.h  scheduler.h  source.h  stringlib.h  substring.h  support11.h  undervest.h  uri.h
src/: Makefile.am
src/loaders/: Makefile.am  ldap.cpp  sendmail.cpp
src/milter/: Makefile.am  configuration.cpp  crc32.cpp  domain.cpp  main.cpp  matcher.cpp  milter.cpp  source.cpp  undervest.cpp  uri.cpp
