#                                    \|||/
#                                   { o o }
#                *------------.oOO-----U-----OOo.------------*
#                *       D A T A S P H E R E   S . A .       *
#                *-------------------------------------------*
#                *                                           *
#                *                 UNDERVEST                 *
#                *                                           *
#                *  - Makefile for documentation.            *
#                *                                           *
#                *-------------------------------------------*
#                * CREATION                                  *
#                *   P. MONNERAT                  03/03/2014 *
#                *--------------.oooO-----Oooo.--------------*
#
#*******************************************************************************

dist_man_MANS		=	undervest.8 undervest.conf.5
