#                                    \|||/
#                                   { o o }
#                *------------.oOO-----U-----OOo.------------*
#                *       D A T A S P H E R E   S . A .       *
#                *-------------------------------------------*
#                *                                           *
#                *                 UNDERVEST                 *
#                *                                           *
#                *  - Makefile for headers.                  *
#                *                                           *
#                *-------------------------------------------*
#                * CREATION                                  *
#                *   P. MONNERAT                  26/02/2014 *
#                *--------------.oooO-----Oooo.--------------*
#
#*******************************************************************************

noinst_HEADERS	=	cdlfcn						\
			configuration.h					\
			crc32.h						\
			daemon.h					\
			domain.h					\
			filepath.h					\
			globals.h					\
			logger.h					\
			matcher.h					\
			milter.h					\
			scaled.h					\
			scheduler.h					\
			source.h					\
			stringlib.h					\
			substring.h					\
			undervest.h					\
			uri.h						\
			support11.h
