#                                    \|||/
#                                   { o o }
#                *------------.oOO-----U-----OOo.------------*
#                *       D A T A S P H E R E   S . A .       *
#                *-------------------------------------------*
#                *                                           *
#                *                 UNDERVEST                 *
#                *                                           *
#                *  - Makefile for sources.                  *
#                *                                           *
#                *-------------------------------------------*
#                * CREATION                                  *
#                *   P. MONNERAT                  26/02/2014 *
#                *--------------.oooO-----Oooo.--------------*
#
#*******************************************************************************

SUBDIRS		=	milter loaders
