#                                    \|||/
#                                   { o o }
#                *------------.oOO-----U-----OOo.------------*
#                *       D A T A S P H E R E   S . A .       *
#                *-------------------------------------------*
#                *                                           *
#                *                 UNDERVEST                 *
#                *                                           *
#                *  - Makefile for loaders.                  *
#                *                                           *
#                *-------------------------------------------*
#                * CREATION                                  *
#                *   P. MONNERAT                  26/02/2014 *
#                *--------------.oooO-----Oooo.--------------*
#
#*******************************************************************************

pkglib_LTLIBRARIES	=	sendmail.la ldap.la

sendmail_la_SOURCES	=	sendmail.cpp
sendmail_la_LDFLAGS	=	-module -avoid-version

ldap_la_SOURCES		=	ldap.cpp
ldap_la_LDFLAGS		=	-module -avoid-version
