#                                    \|||/
#                                   { o o }
#                *------------.oOO-----U-----OOo.------------*
#                *                                           *
#                *                 UNDERVEST                 *
#                *                                           *
#                *  - Makefile for loaders.                  *
#                *                                           *
#                *-------------------------------------------*
#                *                                           *
#                * Copyright (c) 2014-2015 Datasphere S.A.   *
#                * Copyright (c) 2015 D+H                    *
#                *                                           *
#                *   This software is licensed as described  *
#                * in the file LICENSE, which you should     *
#                * have received as part of this             *
#                * distribution.                             *
#                *   You may opt to use, copy, modify,       *
#                * merge, publish, distribute and/or sell    *
#                * copies of this software, and permit       *
#                * persons to whom this software is          *
#                * furnished to do so, under the terms of    *
#                * the LICENSE file.                         *
#                *   This software is distributed on an      *
#                * "AS IS" basis, WITHOUT WARRANTY OF ANY    *
#                * KIND, either express or implied.          *
#                *                                           *
#                *-------------------------------------------*
#                * CREATION                                  *
#                *   P. MONNERAT                  26/02/2014 *
#                *--------------.oooO-----Oooo.--------------*
#
#*******************************************************************************

pkglib_LTLIBRARIES	=	sendmail.la ldap.la

sendmail_la_SOURCES	=	sendmail.cpp
sendmail_la_LDFLAGS	=	-module -avoid-version

ldap_la_SOURCES		=	ldap.cpp
ldap_la_LDFLAGS		=	-module -avoid-version
