#                                    \|||/
#                                   { o o }
#                *------------.oOO-----U-----OOo.------------*
#                *       D A T A S P H E R E   S . A .       *
#                *-------------------------------------------*
#                *                                           *
#                *                 UNDERVEST                 *
#                *                                           *
#                *  - Makefile for milter.                   *
#                *                                           *
#                *-------------------------------------------*
#                * CREATION                                  *
#                *   P. MONNERAT                  26/02/2014 *
#                *--------------.oooO-----Oooo.--------------*
#
#*******************************************************************************

sbin_PROGRAMS =		undervest

undervest_SOURCES =	source.cpp					\
			domain.cpp					\
			configuration.cpp				\
			matcher.cpp					\
			milter.cpp					\
			undervest.cpp					\
			uri.cpp						\
			crc32.cpp					\
			main.cpp

undervest_LDFLAGS =	-export-dynamic
